vlib/v/checker/tests/match_expr_with_none_only.vv
fn main() {
	a := match 1 {
		1 { none }
		else { none }
	}
}
